--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!--CSS-->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
-        <div class="header-container">
-          <nav class="header-nav">
+        <div class="header__container">
+          <nav class="header__nav">
             <a href="./index.html">
               <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
               <!-- logo -->
             </a>
-            <ul class="header-list">
+            <ul class="header__list">
               <li>
                 <a class="link" href="#traditions-section">Наші традиції</a>
               </li>
@@ -37,37 +37,44 @@
     <main>
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-title">
-            <span class="accent">Сучасна</span> пекарня
+          <h1 class="hero-section__title">
+            <span class="text-brand">Сучасна</span> пекарня
           </h1>
         </div>
       </section>
       <section class="advantages-section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
-          <ul class="advantages-list">
-            <li class="advantages-item">Великий попит на ринку</li>
-            <li class="advantages-item">Доступні за бюджетом формати</li>
-            <li class="advantages-item">Досвідчена управлінська команда</li>
+          <ul class="advantages-section__list">
+            <li class="advantages-section__item">Великий попит на ринку</li>
+            <li class="advantages-section__item">
+              Доступні за бюджетом формати
+            </li>
+            <li class="advantages-section__item">
+              Досвідчена управлінська команда
+            </li>
           </ul>
         </div>
       </section>
       <section class="traditions-section section" id="traditions-section">
         <div class="container">
-          <div class="traditions-container">
-            <div class="traditions-content">
-              <h2 class="traditions-title section-title">
+          <div class="traditions-section__container">
+            <div class="traditions-section__content">
+              <h2 class="traditions-section__title section__title">
                 Новий формат традицій
               </h2>
-              <p class="traditions-text">
-                <span class="uppercase">shop bakery</span> - це пекарня, яка
-                взяла все найкраще, і зберегла смак традиційної випічки та
-                натуральність інгрідієнтів.
+              <p class="traditions-section__text">
+                <span class="text-brand text-bold uppercase">shop bakery</span>
+                - це пекарня, яка взяла все найкраще, і зберегла смак
+                традиційної випічки та натуральність інгрідієнтів.
               </p>
-              <p class="traditions-text limited">
+              <p
+                class="traditions-section__text traditions-section__text--limited"
+              >
                 Ми працюємо як найвідоміші мережі -
-                <span class="lowercase">5 хвилин і замовлення готово</span>. А
-                ще у наших пекарень стильний дизайн та висока якість
+                <span class="text-brand text-bold lowercase"
+                  >5 хвилин і замовлення готово</span
+                >. А ще у наших пекарень стильний дизайн та висока якість
                 обслуговування.
               </p>
             </div>
@@ -78,29 +85,31 @@
           </div>
         </div>
       </section>
-      <section class="section" id="chefs-section">
+      <section class="chefs-section section" id="chefs-section">
         <div class="container">
-          <h2 class="chefs-title section-title centered">
+          <h2
+            class="chefs-section__title section__title section__title--centered"
+          >
             Найкращі <br />
-            <span class="accent">шеф-кухарі</span>
+            <span class="text-brand-dark">шеф-кухарі</span>
           </h2>
-          <ul class="chefs-list">
-            <l1 class="chefs-item">
+          <ul class="chefs-section__list">
+            <l1 class="chefs-section__item">
               <article class="chef-card">
                 <img
-                  class="chef-photo"
+                  class="chef-card__photo"
                   src="./images/nastya-chef.jpg"
                   alt="nastya-chef"
                 />
                 <div>
-                  <h3 class="chef-title">Настя</h3>
-                  <div class="chef-text">
-                    <p>Привіт, я Настя!</p>
-                    <p>
+                  <h3 class="chef-card__title">Настя</h3>
+                  <div class="chef-card__text">
+                    <p class="chef-card__text">Привіт, я Настя!</p>
+                    <p class="chef-card__text">
                       Вже 10 років я втілюю <br />
                       в життя цікаві та смачні ідеї.
                     </p>
-                    <p>
+                    <p class="chef-card__text">
                       Я випечу для вас <br />
                       найсмачніші вироби!
                     </p>
@@ -108,23 +117,25 @@
                 </div>
               </article>
             </l1>
-            <l1 class="chefs-item">
+            <l1 class="chefs-section__item">
               <article class="chef-card">
                 <img
-                  class="chef-photo"
+                  class="chef-card__photo"
                   src="./images/vlad-chef.jpg"
                   alt="vlad-chef"
                 />
                 <div>
-                  <h3 class="chef-title">Влад</h3>
-                  <div class="chef-text">
-                    <p>Привіт, я Влад.</p>
-                    <p>
+                  <h3 class="chef-card__title">Влад</h3>
+                  <div class="chef-card__text">
+                    <p class="chef-card__text">Привіт, я Влад.</p>
+                    <p class="chef-card__text">
                       Мій кондитерський стаж вже 18 років.
                       <span>shop bakery</span> - це наша любов з якою ми
                       ділимося кожен раз з Вами через нашу випічку.
                     </p>
-                    <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+                    <p class="chef-card__text">
+                      Я зроблю для вас унікальну начинку на будь який смак!
+                    </p>
                   </div>
                 </div>
               </article>
@@ -132,20 +143,29 @@
           </ul>
         </div>
       </section>
-      <section class="section" id="formats-section">
+      <section class="formats-section section" id="formats-section">
         <div class="container">
-          <h2 class="formats-title section-title centered">Формати</h2>
-          <div class="formats-container">
+          <h2
+            class="formats-section__title section__title section__title--centered"
+          >
+            Формати
+          </h2>
+          <div class="formats-section__container">
             <button class="carousel-button" type="button">
               <svg width="16" height="16">
                 <use href="./images/icons.svg#icon-arrow"></use>
               </svg>
             </button>
-            <ul class="formats-list">
-              <li class="format-item">
+            <ul class="formats-section__list">
+              <li class="formats-section__item">
                 <article class="format-card">
-                  <h3 class="format-title" lang="en">Warlus</h3>
-                  <div class="format-text">
+                  <img
+                    class="format-card__image"
+                    src="./images/walrus-format.jpg"
+                    alt="walrus-format image"
+                  />
+                  <h3 class="format-card__title" lang="en">Warlus</h3>
+                  <div class="format-card__text">
                     <p>Площа: до 120 м2</p>
                     <p>Меню: розширене меню</p>
                     <p>
@@ -156,10 +176,15 @@
                   </div>
                 </article>
               </li>
-              <li class="format-item">
+              <li class="formats-section__item">
                 <article class="format-card">
-                  <h3 class="format-title" lang="en">Horseshoe</h3>
-                  <div class="format-text">
+                  <img
+                    class="format-card__image"
+                    src="./images/horseshoe-format.jpg"
+                    alt="horseshoe-format image"
+                  />
+                  <h3 class="format-card__title" lang="en">Horseshoe</h3>
+                  <div class="format-card__text">
                     <p>Площа: до 120 м2</p>
                     <p>Меню: розширене меню</p>
                     <p>
@@ -170,10 +195,15 @@
                   </div>
                 </article>
               </li>
-              <li class="format-item">
+              <li class="formats-section__item">
                 <article class="format-card">
-                  <h3 class="format-title" lang="en">Handlebar</h3>
-                  <div class="format-text">
+                  <img
+                    class="format-card__image"
+                    src="./images/handlebar-format.jpg"
+                    alt="handlebar-format image"
+                  />
+                  <h3 class="format-card__title" lang="en">Handlebar</h3>
+                  <div class="format-card__text">
                     <p>Площа: до 120 м2</p>
                     <p>Меню: розширене меню</p>
                     <p>
@@ -195,19 +225,19 @@
       </section>
       <section class="contacts-section section" id="contacts-section">
         <div class="container">
-          <div class="contact-container">
-            <div class="contact-form">
-              <h2 class="contacts-title section-title">
+          <div class="contacts-section__container">
+            <div class="contacts-section__form">
+              <h2 class="contacts-section__title section__title">
                 Приєднуйтесь до мережі пекарень
               </h2>
               <p>Заповни форму, щоб ми звʼязались з тобою!</p>
               <form name="contact-form" autocomplete="off" novalidate>
-                <div class="form-field">
-                  <label class="form-imput visually-hidden" for="user-name"
+                <div class="contacts-section__form-field input">
+                  <label class="input__label visually-hidden" for="user-name"
                     >Ім'я</label
                   >
                   <input
-                    class="form-input"
+                    class="input__control"
                     type="text"
                     id="user-name"
                     name="user-name"
@@ -215,12 +245,12 @@
                   />
                 </div>
 
-                <div class="form-field">
-                  <label class="form-imput visually-hidden" for="user-tel"
+                <div class="contacts-section__form-field input">
+                  <label class="input__label visually-hidden" for="user-tel"
                     >Телефон</label
                   >
                   <input
-                    class="form-input"
+                    class="input__control"
                     type="tel"
                     id="user-tel"
                     name="user-tel"
@@ -228,12 +258,12 @@
                   />
                 </div>
 
-                <div class="form-field">
-                  <label class="form-imput visually-hidden" for="user-email"
+                <div class="contacts-section__form-field input">
+                  <label class="input__label visually-hidden" for="user-email"
                     >Електронна пошта</label
                   >
                   <input
-                    class="form-input"
+                    class="input__control"
                     type="email"
                     id="user-email"
                     name="user-email"
@@ -241,17 +271,17 @@
                   />
                 </div>
 
-                <button class="button form-button" type="submit">
+                <button class="contacts-section__button button" type="submit">
                   Замовити дзвінок
                 </button>
                 <p class="form-terms">
                   Натискаючи на кнопку я погоджуюсь з
-                  <a class="form-link" href="#">політикою конфіденційності</a>
+                  <a class="form-terms__link" href="#">політикою конфіденційності</a>
                 </p>
               </form>
             </div>
             <iframe
-              class="contact-map"
+              class="contacts-section__map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1734196888473!5m2!1suk!2sua"
               width="603"
               height="595"
@@ -335,56 +365,60 @@
     </footer>
     <div class="backdrop is-hidden">
       <div class="modal">
-        <button class="modal-btn-close" type="button">Close</button>
+        <button class="modal__btn-close modal-btn-close" type="button">Close</button>
         <h2>Замовити дзвінок</h2>
         <p>Залишіть заявку та наш спеціаліст звʼяжиться з Вами!</p>
 
-        <form name="modal-form" autocomplete="off" novalidate>
-          <div class="form-field">
-            <label class="form-imput visually-hidden" for="user-name"
+        <form name="modal-form" autocomplete="off">
+          <div class="modal__form-field input">
+            <label class="input__label visually-hidden" for="user-name"
               >Ім'я</label
             >
             <input
-              class="form-input"
+              class="input__control"
               type="text"
               id="user-name"
               name="user-name"
               placeholder="Ім'я"
+              required
             />
           </div>
 
-          <div class="form-field">
-            <label class="form-imput visually-hidden" for="user-tel"
+          <div class="modal__form-field input">
+            <label class="input__label visually-hidden" for="user-tel"
               >Телефон</label
             >
             <input
-              class="form-input"
+              class="input__control"
               type="tel"
               id="user-tel"
               name="user-tel"
               placeholder="Телефон"
+              required
+              pattern="^\+[0-9]{12}"
             />
           </div>
 
-          <div class="form-field">
-            <label class="form-imput visually-hidden" for="user-email"
+          <div class="modal__form-field input">
+            <label class="input__label visually-hidden" for="user-email"
               >Електронна пошта</label
             >
             <input
-              class="form-input"
+              class="input__control"
               type="email"
               id="user-email"
               name="user-email"
               placeholder="Електронна пошта"
+              required
             />
           </div>
 
-          <button class="button form-button" type="submit">
+          <button class="modal__button button" type="submit">
             Замовити дзвінок
           </button>
           <p class="form-terms">
             Натискаючи на кнопку я погоджуюсь з
-            <a class="form-link" href="#">політикою конфіденційності</a>
+            <a class="form-terms__link" href="#">політикою конфіденційності</a>
           </p>
         </form>
       </div>
